infra/k8s/base/verdaccio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: npm-registry
  labels:
    app.kubernetes.io/name: verdaccio
    app.kubernetes.io/component: npm-registry
    app.kubernetes.io/part-of: enclii-platform
    enclii.dev/type: platform
